# Chimera

./: .gitignore  AGENTS.md  README.md  justfile  nx.json  package.json  pnpm-lock.yaml  tsconfig.base.json
apps/vuln-api/: AGENTS.md  API-DOCUMENTATION.md  Dockerfile  Dockerfile.fargate  Dockerfile.prod  Makefile  README.md  app.py  app.py.monolith  gunicorn.conf.py  justfile  main.py  project.json  pyproject.toml  security.py  wsgi.py
apps/vuln-api-hp/: Cargo.toml  Dockerfile  Dockerfile.prod  Makefile  project.json
apps/vuln-api-hp/src/: main.rs
apps/vuln-api/app/: __init__.py  asgi.py  cli.py  config.py  database.py  error_handlers.py  error_handlers_asgi.py  models.py  orm.py  routing.py  throughput.py
apps/vuln-api/app/middleware/: traffic_recorder.py  traffic_recorder_asgi.py
apps/vuln-api/app/models/: __init__.py  dal.py  data_stores.py
apps/vuln-api/app/services/: __init__.py  apparatus_service.py
apps/vuln-api/app/utils/: __init__.py  auth_helpers.py  demo_data.py  hotpatch.py  monitoring.py  responses.py  templates.py  validators.py
apps/vuln-api/docs/: catalog-artifacts-migration-plan.md  openapi.yaml  subagents-recommendations.md
apps/vuln-api/docs/archive/: PHASE_0_FOUNDATIONS.md  PHASE_0_USAGE_EXAMPLES.md  README.md  api-demo-plan.md
apps/vuln-api/scripts/: check_fedramp_openapi_annotations.py  check_openapi_drift.py  migrate_to_blueprints.py  run-compose.mjs  run_tests.sh  test_auth_workstream.sh  test_error_handlers.py  test_workstreams.py
apps/vuln-api/static/: api-styles.css  styles.css
apps/vuln-api/tests/: README.md  __init__.py  conftest.py  verify_vaas.py
apps/vuln-api/tests/unit/: test_admin_routes.py  test_apparatus_service.py  test_attack_sim_routes.py  test_auth_helpers.py  test_auth_routes.py  test_banking_routes.py  test_dal.py  test_demo_data.py  test_ecommerce_routes.py  test_energy_utilities_routes.py  test_fedramp_openapi_validator.py  test_government_routes.py  test_healthcare_routes.py  test_hotpatch.py  test_insurance_routes.py  test_integrations_routes.py  test_migrated_flask_compat_routes.py  test_monitoring.py  test_responses.py  (+9 more)
(+160 files in other folders)
