[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chimera-api"
version = "0.1.5"
authors = [
{name = "Nicholas Ferguson", email = "nick@atlascrew.dev"}
]
maintainers = [
{name = "Nicholas Ferguson", email = "nick@atlascrew.dev"}
]
readme = "README.md"
keywords = ["security", "vulnerable-api", "vulnerable-app", "cybersecurity", "offensive-security", "security-testing", "security-education", "Starlette", "ASGI"]
description = "Starlette demo API application for resilience testing"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "SQLAlchemy>=2.0",
    "PyJWT==2.8.0",
    "requests>=2.31.0",
    "starlette>=0.37.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "libcst>=1.1.0",
]

[project.scripts]
chimera-api = "app.cli:main"

[project.urls]
Homepage = "https://nickcrew.github.io/Chimera"
Repositroy = "https://github.com/NickCrew/Chimera"
Issues = "https://github.com/NickCrew/Chimera/Issues"
Documentation = "https://nickcrew.github.io/Chimera"

[tool.hatch.build.targets.wheel]
packages = ["app"]
